Fixes after code inspection